fixed layout issues

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -35,6 +35,10 @@ body {
 
 /*---------------INDEX PAGE---------------*/
 
+.row {
+  margin: 0;
+}
+
 .dates img {
   width: 50px;
   height: 50px;
@@ -74,9 +78,13 @@ body {
   align-items: center;
 }
 
+.dates div {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
 .address {
   margin-top: 20px;
-  width: 380px;
   word-wrap: break-word;
 }
 
@@ -109,6 +117,10 @@ body {
   justify-content: flex-end;
 }
 
+#chat {
+  margin-top: 107px;
+}
+
 #div-chat {
   width: 100vw;
   margin: 0;
@@ -117,14 +129,19 @@ body {
 }
 
 #posts {
-  font-size: 26px;
-  min-height: 86vh;
-  width: 100vw; 
+  font-size: 20px;
+  /*height: 69vh;*/
+  /*width: 280px;*/
+  /*overflow:scroll; */
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  overflow:scroll;
-  overflow-x:hidden;
+}
+
+.h-scroll {
+  width: 280px;
+  height: 455px;
+  overflow: scroll;
 }
 
 #create-post {
@@ -298,6 +315,7 @@ body {
 
 .background-img {
   background-image: url("../images/background-blue.jpg");
+  background-size: 100%;
 }
 
 .glyphicon-hand-left {
